# openelections-data-la

./: 20000314__la__primary.csv  20001007__la__special__primary__precinct.csv  20001107__la__general.csv  20001107__la__special__primary__precinct.csv  20001209__la__special__general__state_house__104.csv  20010210__la__special__primary__precinct.csv  20010217__la__special__primary.csv  20010217__la__special__primary__precinct.csv  20010505__la__special__primary__precinct.csv  20010721__la__special__primary__precinct.csv  20010818__la__special__general.csv  20011124__la__special__primary.csv  20011124__la__special__primary__precinct.csv  20011215__la__special__primary__precinct.csv  20020406__la__special__primary.csv  20020406__la__special__primary__precinct.csv  20020504__la__special__general__precinct.csv  20021105__la__primary__precinct.csv  20021207__la__general.csv  20021207__la__special__primary__precinct.csv  20030118__la__special__general__precinct.csv  20030118__la__special__primary.csv  20030215__la__special__general__precinct.csv  20030215__la__special__general__state_senate__36.csv  20030215__la__special__primary__precinct.csv  20030215__la__special__primary__state_house__13.csv  20030315__la__special__general__precinct.csv  20030315__la__special__general__state_house__13.csv  20031004__la__primary.csv  20031004__la__primary__legislative.csv  20031004__la__primary__statewide.csv  20031115__la__general__legislative.csv  20031115__la__general__statewide.csv  20040309__la__primary__precinct.csv  20040417__la__special__general.csv  20040918__la__special__primary.csv  (+84 more)
(+292 files in other folders)
