[tool.poetry]
name = "wrangler"
version = "0.1.0"
description = "Wrangling Raw Election Data"
authors = ["TheBoatyMcBoatFace <bentleyhensel@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
